--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'androidx.fragment:fragment:1.3.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
