--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -9,60 +11,67 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.JuegoDSAREST3"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".activities.MenuPrincipal"
-            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".activities.RegisterActivity"
-            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".activities.tiendaActivity"
-            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar"
-            android:exported="false">
+            android:name=".activities.TiendaActivity"
+            android:exported="false"
+            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".activities.row_layout"
-            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".activities.InicialActivity"
+            android:name=".activities.Splash"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.JuegoDSAREST3.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.InicialActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.JuegoDSAREST3.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
